# FAST-GC

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  conda-package.yml  docker.yml  release-pypi.yml
conda-recipe/: meta.yaml
docs/: cloud.md  colab.md  conda.md  r.md
examples/: Laz2Las_SOR.r  fastgc_from_r.R
notebooks/: FAST_GC_Colab_setup.txt
src/fastgc/: __init__.py  change.py  chm.py  cli.py  core.py  invert_vote.py  io_las.py  itd.py  merge.py  monster.py  post_fp_fix.py  preprocess.py  raster_post.py  sensors.py  structure.py  terrain.py  tls_vote.py  treeclouds.py  utils.py  void_recover.py  zclean.py
src/fastgc/itd_algorithms/: __init__.py  common.py  lmf.py  watershed.py  yun2021.py
tests/: test_cli_help.py  test_import.py  test_smoke_workflows.py
