[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastgc"
version = "0.2.0"
description = "FAST-GC: Fully Adaptive Self-Tuning Sensor-Agnostic Ground Classification for LiDAR point clouds"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }

authors = [
  { name = "Nadeem Fareed" }
]

keywords = [
  "lidar",
  "point-cloud",
  "ground-classification",
  "dem",
  "dsm",
  "chm",
  "terrain",
  "als",
  "uls",
  "tls",
  "itd"
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: GIS",
  "Topic :: Scientific/Engineering :: Information Analysis"
]

dependencies = [
  "numpy>=1.22,<2.0",
  "scipy>=1.9,<1.14",
  "laspy>=2.4",
  "lazrs>=0.6",
  "rasterio>=1.3",
  "fiona>=1.9",
  "shapely>=2.0",
  "tqdm>=4.64",
  "joblib>=1.3",
  "psutil>=5.9"
]

[project.urls]
Homepage = "https://github.com/nadeemfareed/FAST-GC"
Repository = "https://github.com/nadeemfareed/FAST-GC"
Issues = "https://github.com/nadeemfareed/FAST-GC/issues"

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "twine>=5.0",
  "pytest>=8.0",
  "ruff>=0.6",
  "black>=24.0",
  "pre-commit>=3.0"
]

all = [
  "build>=1.2",
  "twine>=5.0",
  "pytest>=8.0",
  "ruff>=0.6",
  "black>=24.0",
  "pre-commit>=3.0"
]

[project.scripts]
fastgc = "fastgc.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]